--- a/index.html
+++ b/index.html
@@ -2,12 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taller Atlas</title>
+    <link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<script src="https://kit.fontawesome.com/779ae99c75.js" crossorigin="anonymous"></script>
+	<script defer src="js/animacion.js"></script>
 </head>
-<body>
-<h1>Bienvenido</h1>
-<h1>Taller Atlas</h1>
+
+<body class="contenedorTotal">
+    <header class="cabezera">
+		<nav class="contenedor">
+			<a href="#" class="logo contenedor-link">Taller Atlas</a>
+			<button class="contenedor-boton aria-label="Abrir menú"><i class="fa-solid fa-bars"></i>
+			</button>
+				<ul class="contenedor-menu">
+					<li class="contenedor-menu-item"><a href="#nosotros" class="contenedor-menu-link contenedor-link">Nosotros</a></li>
+					<li class="contenedor-menu-item"><a href="#productos" class="contenedor-menu-link contenedor-link">Productos y Servicios</a></li>
+					<li class="contenedor-menu-item"><a href="#informacion" class="contenedor-menu-link contenedor-link">Informacion Tecnica</a></li>
+					<li class="contenedor-menu-item"><a href="#bitacora" class="contenedor-menu-link contenedor-link">Bitacora de Mantenimiento de Clientes</a></li>
+					<li class="contenedor-menu-item"><a href="#contacto" class="contenedor-menu-link contenedor-link contenedor-menu-link_active">Contactanos</a></li>
+				</ul>
+		</nav>
+	</header>
+  
+    <div class="carrusel" >
+        <div class="carrusel-items" >
+            <div class="carrusel-item">
+                <img src="imagenes/lobby.jpg">
+            </div>
+        </div>
+    </div>
     
+    <div class="titulo"  id="div_general">
+        <div7>
+        <!--<h1 id= "titulo_principal">Taller Atlas</h1>-->
+        <h2 id="titulo_secundario" class="letranormal" >Taller Atlas</h2>
+        </div7>
+    </div>
+    
+
+<script>
+
+</script>
+
+
+  
+<footer class="footer">
+    <h5>Taller Atlas</h5>
+        <div id=img_foot>
+            <img id="img_footer" src="imagenes/footer.png">
+        </div>
+</footer>
+
 </body>
 </html>
