--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
 </script>
 
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3926.1128910825546!2d-67.61464002548873!3d10.252478268640463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e803b2816dcdced%3A0xadbf2fbdb47707e!2sTaller%20Atlas%20c.a.!5e0!3m2!1ses-419!2sve!4v1689728950836!5m2!1ses-419!2sve" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 
   
 <footer class="footer">
