--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<button class="contenedor-boton aria-label="Abrir menú"><i class="fa-solid fa-bars"></i>
 			</button>
 				<ul class="contenedor-menu">
-					<li class="contenedor-menu-item"><a href="#nosotros" class="contenedor-menu-link contenedor-link">Nosotros</a></li>
+					<li class="contenedor-menu-item"><a href="#ubicanos" class="contenedor-menu-link contenedor-link">Ubicanos</a></li>
 					<li class="contenedor-menu-item"><a href="#productos" class="contenedor-menu-link contenedor-link">Productos y Servicios</a></li>
 					<li class="contenedor-menu-item"><a href="#informacion" class="contenedor-menu-link contenedor-link">Informacion Tecnica</a></li>
 					<li class="contenedor-menu-item"><a href="#bitacora" class="contenedor-menu-link contenedor-link">Bitacora de Mantenimiento de Clientes</a></li>
