--- a/index.html
+++ b/index.html
@@ -41,7 +41,17 @@
         </div7>
     </div>
     
+    <div class="nosotros">
+        <p>
+            Bienvenido!!!
 
+            Somos la mejor opción para el cuidado de su vehículo, le ofrecemos servicio de mecanica en general, electroauto, cambio de aceite y mas.
+
+            Tenemos amplia expericia y contamos con los profesionales mas dedicados
+
+            Confiee en nosotros para preservar y mantener su vehiculo
+        </p>
+    </div>
 <script>
 
 </script>
@@ -51,7 +61,9 @@
 
   
 <footer class="footer">
-    <h5>Taller Atlas</h5>
+    <h6>Soluciones gm 83 c.a.</h5>
+    <h6>Rif </h5>
+    <h6>Centro Comercial La Romana local x, av Miranda c/c av ayacucho, Maracay</h5>
         <div id=img_foot>
             <img id="img_footer" src="imagenes/footer.png">
         </div>
