--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
     </div>
     
     <div class="nosotros">
+        <h3>Bienvenido!!!</h3>
         <p>
-            Bienvenido!!!
-
             Somos la mejor opción para el cuidado de su vehículo, le ofrecemos servicio de mecanica en general, electroauto, cambio de aceite y mas.
 
             Tenemos amplia expericia y contamos con los profesionales mas dedicados
