carrusel de imagenes de marcas

--- a/index.html
+++ b/index.html
@@ -25,14 +25,23 @@
 				</ul>
 		</nav>
 	</header>
-  
-    <div class="carrusel" >
-        <div class="carrusel-items" >
-            <div class="carrusel-item">
-                <img src="imagenes/lobby.jpg">
-            </div>
-        </div>
+
+    <h2>Trabajamos con las marcas!!!</h2>
+
+    <div class="slider-frame">
+        <ul>
+            <li><img src="imagenes/chery.png" alt=""></li>
+            <li><img src="imagenes/chevrolet.png" alt=""></li>
+            <li><img src="imagenes/dodge.png" alt=""></li>
+            <li><img src="imagenes/fiat.png" alt=""></li>
+            <li><img src="imagenes/ford.png" alt=""></li>
+            <li><img src="imagenes/gm.png" alt=""></li>
+            <li><img src="imagenes/jeep.png" alt=""></li>
+            <li><img src="imagenes/mazda.png" alt=""></li>
+            <li><img src="imagenes/nissan.png" alt=""></li>
+        </ul>
     </div>
+
     
     <div class="titulo"  id="div_general">
         <div7>
