--- a/index.html
+++ b/index.html
@@ -29,14 +29,45 @@
     <h1 >Bienvenido!! a Taller Atlas </h1>
     <br>
     </div>
-    <div  class="nosotros">
-        
+    <div  class="quienes somos">
+        <h2>¿Quienes Somos?</h2>
         <p>
-            Somos la mejor opción para el cuidado de su vehículo, le ofrecemos servicio de mecanica en general, electroauto, cambio de aceite y mas.
-            Tenemos amplia expericia y contamos con los profesionales mas dedicados
-            Confiee en nosotros para preservar y mantener su vehiculo
+            Somos un taller mecánico automotriz con más de 10 años de experiencia en el sector.
+Ofrecemos servicios de reparación, mantenimiento y diagnóstico de vehículos de todas las marcas y modelos.
+Contamos con un equipo de profesionales cualificados y equipamiento de última generación.
+Nuestro objetivo es brindar un servicio de calidad, eficiente y garantizado a nuestros clientes.
         </p>
     </div>
+
+    <div  class="que hacemos">
+        <h2>¿Que Hacemos?</h2>
+        <p>
+            Realizamos todo tipo de reparaciones mecánicas, eléctricas y electrónicas de vehículos.
+            Hacemos revisiones periódicas y preventivas para asegurar el buen funcionamiento y la seguridad de los vehículos.
+            Detectamos y solucionamos cualquier avería o problema que pueda presentar el vehículo mediante equipos de diagnóstico avanzado.
+            Asesoramos a nuestros clientes sobre el cuidado y el mantenimiento de sus vehículos.
+        </p>
+    </div>
+    <div  class="por que elegirnos">
+        <h2>¿Por Que Elegirnos?</h2>
+        <p>
+            Porque ofrecemos un servicio personalizado y adaptado a las necesidades de cada cliente.
+Porque tenemos precios competitivos y transparentes, sin sorpresas ni costes ocultos.
+Porque garantizamos la calidad y la durabilidad de nuestras reparaciones, utilizando repuestos originales o de primeras marcas.
+Porque disponemos de un servicio de atención al cliente rápido y eficaz, que resuelve cualquier duda o incidencia que pueda surgir.
+        </p>
+    </div>
+    <div  class="como contactarnos">
+        <h2>¿Como Contactarnos?</h2>
+        <p>
+            Puedes visitarnos en nuestra dirección: av Miranda c/c av Ayacucho CC La Romana
+            Puedes llamarnos al teléfono: 0412-3240846 , 0412-7101180
+            Puedes enviarnos un correo electrónico a: talleratlasmcy@gmail.com
+            Puedes seguirnos en nuestras redes sociales: Facebook,  Instagram. @talleratlas
+        </p>
+    </div>
+    
+
     <h2 align="center">Trabajamos con las marcas!!!</h2>
 
     <div class="slider-frame">
