--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taller Atlas</title>
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"
+    />
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<script src="https://kit.fontawesome.com/779ae99c75.js" crossorigin="anonymous"></script>
 	<script defer src="js/animacion.js"></script>
