--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <h1 >Bienvenido!! a Taller Atlas </h1>
     <br>
     </div>
+
+<div class="c1">
+    <img class="imagen_div" src="imagenes/logo cuadrado taller atlas.png" alt="">
     <div  class="quienes somos">
         <h2>¿Quienes Somos?</h2>
         <p>
@@ -41,8 +44,10 @@ Ofrecemos servicios de reparación, mantenimiento y diagnóstico de vehículos d
 Contamos con un equipo de profesionales cualificados y equipamiento de última generación.
 Nuestro objetivo es brindar un servicio de calidad, eficiente y garantizado a nuestros clientes.
         </p>
-    </div>
+    </div>   
+</div>
 
+<div class="c2">
     <div  class="que hacemos">
         <h2>¿Que Hacemos?</h2>
         <p>
@@ -52,6 +57,11 @@ Nuestro objetivo es brindar un servicio de calidad, eficiente y garantizado a nu
             Asesoramos a nuestros clientes sobre el cuidado y el mantenimiento de sus vehículos.
         </p>
     </div>
+    <img class="imagen_div" src="imagenes/logo redondo taller atlas.png" alt="">
+</div>
+
+<div class="c3">
+    <img class="imagen_div" src="imagenes/logo redondo taller atlas.png" alt="">
     <div  class="por que elegirnos">
         <h2>¿Por Que Elegirnos?</h2>
         <p>
@@ -61,6 +71,8 @@ Porque garantizamos la calidad y la durabilidad de nuestras reparaciones, utiliz
 Porque disponemos de un servicio de atención al cliente rápido y eficaz, que resuelve cualquier duda o incidencia que pueda surgir.
         </p>
     </div>
+</div>
+
     <div  class="como contactarnos">
         <h2>¿Como Contactarnos?</h2>
         <p>
