--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 Nuestro objetivo es brindar un servicio de calidad, eficiente y garantizado a nuestros clientes.
             </h4>
         </div> 
-        <div>Prueeeeebbbbbba</div>  
+
     </div>
 
     <div style="background-image: url(imagenes/fondo_carro_rojo.png);" class="c2">
@@ -75,7 +75,7 @@
         </div>
     </div>
 
-    <div style="background-image: url(imagenes/fondo_carro_amarillo.png);"  class="c4">
+    <div style="background-image: url(imagenes/fondo_cambio_aceite1.png);"  class="c4">
         <div  class="como contactarnos">
             <h3>¿Como Contactarnos?</h3>
             <h4>
@@ -110,7 +110,7 @@
     </script>
 
     <h4 align="left">Direccion</h4>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3926.1128910825546!2d-67.61464002548873!3d10.252478268640463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e803b2816dcdced%3A0xadbf2fbdb47707e!2sTaller%20Atlas%20c.a.!5e0!3m2!1ses-419!2sve!4v1689728950836!5m2!1ses-419!2sve" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3926.1128910825546!2d-67.61464002548873!3d10.252478268640463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e803b2816dcdced%3A0xadbf2fbdb47707e!2sTaller%20Atlas%20c.a.!5e0!3m2!1ses-419!2sve!4v1689728950836!5m2!1ses-419!2sve" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <footer class="footer">
         <h6>Soluciones gm 83 c.a.</h6>
