--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<li class="contenedor-menu-item"><a href="#productos" class="contenedor-menu-link contenedor-link">Productos y Servicios</a></li>
 					<li class="contenedor-menu-item"><a href="#informacion" class="contenedor-menu-link contenedor-link">Informacion Tecnica</a></li>
 					<li class="contenedor-menu-item"><a href="#bitacora" class="contenedor-menu-link contenedor-link">Bitacora de Mtto</a></li>
-					<li class="contenedor-menu-item"><a href="#contacto" class="contenedor-menu-link contenedor-link contenedor-menu-link_active">Contactanos</a></li>
+					<li class="contenedor-menu-item"><a href="#contacto" class="contenedor-menu-link contenedor-link ">Contactanos</a></li>
 				</ul>
 		</nav>
 	</header>
