--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="mapa" id="ubicanos">
         <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3926.1128910825546!2d-67.61464002548873!3d10.252478268640463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e803b2816dcdced%3A0xadbf2fbdb47707e!2sTaller%20Atlas%20c.a.!5e0!3m2!1ses-419!2sve!4v1689728950836!5m2!1ses-419!2sve" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    <footer class="footer" id="Contacto">
+    <footer class="footer" id="contacto">
         <h4>Soluciones gm 83 c.a.</h4>
         <h4>Rif J-50411101-5</h4>
         <h4>Centro Comercial La Romana local B4, av Miranda c/c av ayacucho, Maracay</h4>
