--- a/administrador.html
+++ b/administrador.html
@@ -39,11 +39,11 @@
 
 <a href="mostrar_crud_conajax_productos.php">Servicios y Productos</a>
 <br>
-<a href="cargar_crud_cartera_clientes.php">Clientes</a>
+<a href="mostrarconajax_clientes.php">Clientes</a>
 <br>
-<a href="cargar_crud_cartera_Trabajadores.php">Trabajadores</a>
+<a href="mostrarconajax_Trabajadores.php">Trabajadores</a>
 <br>
-<a href="cargar_crud_cartera_usuarios.php">Usuarios</a>
+<a href="mostrar_crud_conajax_usuarios.php">Usuarios</a>
 <br>
     <a href="mostrar_crud_taller_ajax.php">Registro de trabajos del Taller</a>
 <br>
