--- a/administrador.html
+++ b/administrador.html
@@ -47,7 +47,7 @@
 <br>
     <a href="mostrar_crud_taller_ajax.php">Registro de trabajos del Taller</a>
 <br>
-<a href="">Ventas</a>
+<a href="mostrar_conajax_ventas.php">Ventas</a>
 
 <br>
 <br>
